<resources>
    <string name="app_name">Swoosh</string>
    <string name="bacground_image">bacground image</string>
    <string name="app_logo">app logo</string>
    <string name="desire_league">Desire League:</string>
    <string name="mens">Mens</string>
    <string name="womens">Womens</string>
    <string name="co_ed">Co-Ed</string>
    <string name="next">Next</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_you_city_amp_dominate_the_league">
        <![CDATA[Find A Team in you city & dominate the league]]></string>
    <string name="get_started">GET STARTED</string>
    <string name="i_am_a">I am a:</string>
    <string name="beginner">BEGINNER</string>
    <string name="baller">BALLER</string>
    <string name="finish">FINISH</string>
    <string name="screen_to_searach_for_league">screen to searach for league</string>
</resources>
